--- a/style.css
+++ b/style.css
@@ -94,26 +94,6 @@ nav ul li a:hover {
     margin-bottom: 10px;
 }
 
-.price {
-    color: #007bff;
-    font-size: 1.2rem;
-    margin-bottom: 15px;
-}
-
-.add-to-cart {
-    background-color: #28a745;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-.add-to-cart:hover {
-    background-color: #218838;
-}
-
 footer {
     background-color: #333;
     color: white;
@@ -131,4 +111,8 @@ footer {
     .product {
         width: 100%; /* Full width for single product per row */
     }
+}
+.td-tshirt{
+    cursor: pointer;
+    background-color: #a8dadc;
 }
