--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #a8dadc; /* Hover effect color change */
+    color: #a8dadc; 
+    margin: auto;
 }
 
 .cart-icon {
@@ -72,7 +73,7 @@ nav ul li a:hover {
     background-color: white;
     margin: 10px;
     padding: 20px;
-    width: calc((100% / 3) - 40px); /* Adjust for 3 products per row */
+    width: calc((100% / 3) - 40px);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -85,7 +86,7 @@ nav ul li a:hover {
 
 .product img {
     max-width: 100%;
-    height: auto;
+    height: 80%;
     margin-bottom: 15px;
 }
 
@@ -120,6 +121,8 @@ h2{
     margin-top: 0%;
     font-family: 'Times New Roman';
     font-size: 20px;
+    text-align: bottom;
+    padding-top: 30px;
 }
 .price{
     color: rgb(12, 235, 97);
