--- a/style.css
+++ b/style.css
@@ -86,8 +86,9 @@ nav ul li a:hover {
 
 .product img {
     max-width: 100%;
-    height: 80%;
+    height: 70%;
     margin-bottom: 15px;
+    
 }
 
 .product h2 {
@@ -126,4 +127,5 @@ h2{
 }
 .price{
     color: rgb(12, 235, 97);
+    vertical-align: bottom;
 }
